# EvolveAI

./: .gitignore  BACKGROUND_JOBS_SCALING.md  BUILD_OPTIONS.md  RAG_PLAYBOOK_SUMMARY.md  README.md  SECURITY_REVIEW_ISSUES.md  SUPABASE_SETUP.md  backend_scenario_endpoints.py  env.template  run_tests.sh  setup-frontend-env.sh  setup_ios_config.sh  setup_ios_dependencies.sh  setup_supabase.sh  start.sh  supabase_schema.sql
backend/: .dockerignore  ACE_FINAL_ANALYSIS.md  ACE_SUMMARY.md  Dockerfile  PROMPT_ANALYSIS_SUMMARY.md  PROMPT_BIAS_ANALYSIS.md  README.md  REFACTORING_PROPOSAL.md  __init__.py  create_lessons_table.sql  env.template  fix_async_tests.py  fix_async_tests_comprehensive.py  fix_test_models.py  generated_prompt.txt  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  settings.py  start_server.py
backend/.cursor/: README.md
backend/app/: __init__.py
backend/backend/: settings.py  urls.py
backend/coaches/: models.py  serializers.py  urls.py  views.py
backend/config/: __init__.py  settings.py
backend/docs/: MIGRATION.md  MOCK_SYSTEM.md  README.md  VECTOR_DATABASE_POPULATION.md  __init__.py
backend/mock/: mock_data.py  scenario_decorators.py  scenario_manager.py  scenario_mixin.py  scenario_urls.py  scenario_views.py
backend/scripts/: README.md  SETUP.md  __init__.py  clear_onboarding.py  download_models.py  gemini_llm.ipynb  generate_workout_plan.py  test_match_document_chunks.py  user_profile_template.json
backend/services/: openai_service.py
backend/tests/: README.md  __init__.py  conftest.py  (+9 more)
(+1052 files in other folders)
