[tool.poetry]
name = "backend"
version = "0.1.0"
description = "EvolveAI Django Backend with Supabase Authentication"
authors = ["dantevdh <dante.van.der.heijden@pwc.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.2.4,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-cors-headers = ">=4.7.0,<5.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
openai = ">=1.0.0,<2.0.0"
django-redis = ">=5.4.0,<6.0.0"
redis = ">=5.0.0,<6.0.0"
supabase = ">=2.0.0,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
